<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_first_section">

        <Preference
            android:showDefault="true"
            android:showSilent="true"
            android:title="something"
            android:ringtoneType="ringtone|notification|alarm|all"
            android:key="ring_tone_preference"
            android:persistent="false"/>

        <SeekBarPreference
            android:key="keyName"
            android:title="Property Label"
            android:summary="Summary."
            android:max="5"
            android:defaultValue="0" />

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/title_edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:dialogTitle="@string/dialog_title_edittext_preference"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_second_section">

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_list_preference"
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference" />

        <Preference
            android:title="@string/title_intent_preference">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://codepath.com/" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>